# dataloader-playground

./: Cargo.toml  build.rs
schemas/: library.graphql  loader.graphql
src/: datamodel.rs  main.rs
src/client/: mod.rs
src/server/: dataloader.rs  loaders.rs  mod.rs  schema.rs
src/tests/: mod.rs  testserver.rs
